--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">RandomUserCybillTek</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_refresh">Refresh</string>
     <!-- Strings used for fragments for navigation -->
     <string name="random_users">Random Users</string>
     <string name="second_fragment_label">Second Fragment</string>
