--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,8 @@
     <string name="profile_fragment_label">Profile</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
+    <string name="all_gender">All Gender</string>
+    <string name="male">Male</string>
+    <string name="female">Female</string>
 
 </resources>
